--- a/vue_frontend/public/index.html
+++ b/vue_frontend/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@4.9.95/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="static/pdmv-development-ribbon.css">
+    <script src="static/snow.js"></script>
   </head>
   <body style="background: var(--v-backBackground-base);">
     <noscript>
